# kit

./: .gitignore  LICENSE  Makefile  README.md
doc/: standard_header.md
kernel/: Cargo.toml  archive.c  archive.rs  boot.S  boot.s  boot32.S  boot64.S  c_ffi.rs  cmdline.rs  constants.rs  cpu.rs  elf.c  elf.rs  error.rs  fpu_setup.S  framebuffer.rs  interrupt.c  interrupt.rs  interrupt_8259pic.c  interrupt_isr_stub.S  kernel.c  kernel.mk  kernel.rs  keyboard.c  linker.ld  log.rs  memory.S  memory.c  memory.rs  multiboot.h  multiboot.rs  paging.c  paging.rs  process.c  process.rs  process_asm.S  process_hw.S  ps2_8042.c  ps2key.c  ptr.rs  (+19 more)
kernel/collections/: mod.rs  treemap.rs
kernel/include/: archive.h  config.h  constants.S  debug.h  elf.h  gdt.h  interrupt.h  interrupt_8259pic.h  keyboard.h  memory.h  paging.h  process.h  ps2_8042.h  ps2key.h  rbtree.h  scheduler.h  shell.h  string.h  syscall.h  terminal.h  test.h  x86_64.h
kernel/keyboard/: mod.rs
kernel/keyboard/ps2/: i8042.rs  mod.rs
kernel/memory/: boxed.rs  large_heap.rs  mod.rs  pool.rs  rc.rs  region_math.rs  region_set.rs
kernel/memory/pool/: bitmap.rs
kernel/paging/: generic.rs  mod.rs  x86_64.rs
kernel/process/: mod.rs  x86_64.rs
kernel/scripts/: link.ld
kernel/sync/: lock_free_list.rs  rcu.rs  spinlock.rs  wait.rs
kernel/terminal/: graphical.rs  vga.rs
kernel/terminal/font/: u_vga16.psf
resources/: bochsrc.txt  gdbinit  grub.cfg
resources/build-util/: fs-to-c.rb  kit-archive.rb
system/: hello.txt  stub.S  system.mk
system/kforth/: kforth.c  kforth.mk
tools/: get_tools.sh
(+41 files in other folders)
