[package]
name = "kit-kernel"
version = "0.0.1"
edition = "2018"

[lib]
name = "kernel"
path = "kernel.rs"
crate-type = ["staticlib"]

[dependencies]
static_assertions = "1.1.0"
displaydoc = { version = "0.2", default-features = false }

[dependencies.log]
version = "0.4.14"
default-features = false
